<resources>
    <string name="app_name">BESTPLACE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_add__shop">Add_Shop</string>

    <string name="ADD_SHOP">Add Your Shop</string>
    <string name="SHOP_ID">Shop ID</string>
    <string name="SHOP_NAME">Shope Name</string>
    <string name="SHOP_CONTACT">tel</string>
    <string name="SHOP_DISCRIPTION">Discription</string>
    <string name="SHOP_ADD_PHOTO">Add a photo</string>
    <string name="SHOP_ADDRESS">Address</string>
    <string name="title_activity_add__food">Add_Food</string>
    <string name="title_activity_shop__update">Shop_Update</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="SIGNUP_USERNAME">USER NAME</string>
    <string name="SIGNUP_NAME">Enter Your Name</string>
    <string name="SIGNUP_EMAIL">Enter Your Email</string>
    <string name="SIGNUP_ADDRESS">Enter Your Address</string>
    <string name="SIGNUP_PHONE">Enter you Phone Number</string>
    <string name="SIGNUP_TYPE">Choose The Type</string>
    <string name="SIGNUP">Register</string>
    <string name="LOGIN">Login</string>
    <string name="ENTER_PASSWORD">PASSWORD</string>
    <string name="RESET">Reset</string>
    <string name="SIGINUP">Sign Up</string>
    <string name="title_activity_user__feed">User_Feed</string>
    <string name="PROFILE">Profile</string>
    <string name="title_activity_shop__profile">Shop_Profile</string>
    <string name="title_activity_search_shop">Search_shop</string>
    <string name="SEARCH">Search</string>
    <string name="UPDATE_DELETE">UPDATE/DELETE</string>
    <string name="title_activity_update_delete_shop">Update_delete_shop</string>
    <string name="UPDATE">UPDATE</string>
    <string name="DELETE">DELETE</string>
    <string name="title_activity_profile_shop">profile_shop</string>

    <string-array name="User_Levels">
        <item>Shop Owner</item>
        <item>Customers</item>
    </string-array>


</resources>
